# UR5e_Zivid_ros_noetic

./: .gitignore  README.md
src/soil_manipulation/: CMakeLists.txt  package.xml
src/soil_manipulation/launch/: my_calibrate.launch  tracking.launch  ur5e_moveit_controller.launch  ur5e_state_listener.launch  veryfy_calibration_result_aruco.launch
src/soil_manipulation/nodes/: ur5e_controller_moveit.py  ur5e_state_listener.py  verify_calibration_result_aruco.py  zivid_live_2d.py  zivid_sample_pcd.py
src/soil_manipulation/src/: bash_scripts.sh  cam_extrinsics_fine_tuned.npy  experiment_platform_config.yml  extrinsics.txt  extrinsics.yml  raw_extrinsics.txt  ur5e_robot_calibration.yaml  zivid_cam_extrinsic.yml  zivid_cam_extrinsics_fine_tuned.yml
src/soil_manipulation/src/cartesian_velocities/: sys_id_1_timestamps_0.npy  sys_id_1_v_2.npy  sys_id_2_timestamps_0.npy  sys_id_2_timestamps_3.npy  sys_id_2_v_3.npy
src/soil_manipulation/src/moveit_trajectories/: sys_id_1_timestamps_1.npy  sys_id_1_timestamps_2.npy  sys_id_1_timestamps_3.npy  sys_id_1_v_0.npy  sys_id_1_v_1.npy  sys_id_1_v_3.npy  sys_id_2_timestamps_1.npy  sys_id_2_timestamps_2.npy  sys_id_2_v_0.npy  sys_id_2_v_1.npy  sys_id_2_v_2.npy  sys_id_3_timestamps_0.npy  sys_id_3_v_0.npy
src/soil_manipulation/src/utils/: fine_tune_extrinsics.py  poses.py
src/soil_manipulation/srv/: Skill.srv
src/test/: extrinsic_finetuning.py  test.py
